Added wild cards and changed the game flow.