@@ -2,14 +2,41 @@ import java.util.*;
 
 public class Deck {
     private final List<Card> cards = new ArrayList<>();
+    private static final int WILDCARD_COUNT = 4;
 
     public Deck() {
         for (Card.Suit suit : Card.Suit.values()) {
-            for (Card.Rank rank : Card.Rank.values()) {
-                cards.add(new Card(suit, rank));
+            if (suit != Card.Suit.WILDCARD) {
+                for (Card.Rank rank : Card.Rank.values()) {
+                    if (!isWildRank(rank)) {
+                        cards.add(new Card(suit, rank));
+                    }
+                }
             }
         }
+
+        for (int i = 0; i < WILDCARD_COUNT; i++) {
+            Card.Rank wildRank = getRandomWildRank();
+            cards.add(new Card(Card.Suit.WILDCARD, wildRank));
+        }
+
         shuffle();
+    }
+
+    private Card.Rank getRandomWildRank() {
+        Card.Rank[] wildRanks = {
+            Card.Rank.WILD_RAISE_24,
+            Card.Rank.WILD_RESET_HAND,
+            Card.Rank.WILD_ADD_DEALER
+        };
+        Random random = new Random();
+        return wildRanks[random.nextInt(wildRanks.length)];
+    }
+
+    private boolean isWildRank(Card.Rank rank) {
+        return rank == Card.Rank.WILD_RAISE_24 ||
+               rank == Card.Rank.WILD_RESET_HAND ||
+               rank == Card.Rank.WILD_ADD_DEALER;
     }
 
     public void shuffle() {
@@ -18,6 +45,6 @@ public class Deck {
 
     public Card dealCard() {
         if (cards.isEmpty()) throw new IllegalStateException("Deck is empty.");
-        return cards.remove(0);
+        return cards.removeFirst();
     }
 }
